--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "tutorial3",
+  "homepage": "https://chrishosoolee.github.io/website",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "main -d build"
   },
   "eslintConfig": {
     "extends": [
